Rewrite product.html to Scenario–Ensemble–Compiler product definition

--- a/product.html
+++ b/product.html
@@ -128,7 +128,7 @@
 <header>
   <h1>AI-Ensemble</h1>
   <p>
-    A three-stage reasoning system based on Scenario, Ensemble, and Compiler.
+  A prompt-engineered system combining structured knowledge embedding with a compiler-style solution generator.
   </p>
 </header>
 
@@ -138,21 +138,20 @@
     <h2>Overview</h2>
     <p>
       AI-Ensemble is a structured reasoning system designed to support complex
-      problem-solving, learning, and decision-making.
+      problem-solving.
     </p>
     <p>
       Instead of interacting with a generic chatbot, users work through a
       fixed reasoning pipeline that separates problem specification,
-      alternative reasoning, and grounded synthesis.
+      alternative reasoning, and solution.
     </p>
     <p>
-      The system is available both as an online, scenario-driven learning
-      environment and as a fully local, low-carbon (“Green AI”) version that
+      The system is available both as an online and as a fully local, low-carbon (“Green AI”) version that
       runs entirely on the user’s own machine.
     </p>
     <p>
       Both versions share the same core principles:
-      controlled reasoning, explicit knowledge inputs, and reliability over fluency.
+      controlled reasoning and explicit knowledge inputs.
     </p>
   </section>
 
@@ -160,7 +159,7 @@
     <h2>The Reasoning Pipeline</h2>
     <p>
       At the core of AI-Ensemble is a fixed three-stage pipeline designed to
-      mirror how real technical and strategic decisions are made.
+      guide the user toward the optimal solution.
     </p>
 
     <div class="cards">
@@ -176,12 +175,11 @@
         <ul>
           <li>writing or reviewing code</li>
           <li>planning an experiment</li>
-          <li>improving rate of genetic gain</li>
-          <li>optimizing breeding strategies</li>
-          <li>ICT or process optimization</li>
+          <li>apllication building</li>
+          <li> algorithm creation</li>
         </ul>
         <p>
-          Poorly specified problems are treated as a first-class failure mode.
+          Poorly specified prompts are improved.
         </p>
       </div>
 
@@ -200,13 +198,11 @@
       <div class="card">
         <h3>Compiler — grounded synthesis</h3>
         <p>
-          This stage compares and reconciles alternatives produced by the
-          Ensemble.
+          This stage combines alternatives answers into a solution.
         </p>
         <p>
           It applies curated knowledge and explicit constraints to produce a
-          defensible result, or to state clearly when no reliable conclusion
-          can be drawn.
+          defensible result.
         </p>
       </div>
     </div>
@@ -219,26 +215,24 @@
       AI-Ensemble deliberately separates stages of reasoning.
     </p>
     <p>
-      This separation reduces confusion, exposes hidden trade-offs,
-      prevents premature conclusions, and mirrors how real projects are run.
+      This separation allows us to deliver our curated knowledge to each stage. 
+      By adding prior information in each stage we aim to minimize halucinations.
     </p>
     <p>
-      The stages work together, but they never collapse into one.
+      The stages work together when users transfer knowledge from each stage of our pipeline.
     </p>
   </section>
 
   <section>
-    <h2>User-Defined Scenarios and Private Knowledge</h2>
+    <h2>Pipeline way of working with AI</h2>
     <p>
-      Users are not limited to predefined scenarios. They can create their own,
-      choose which information is available, and control how reasoning is
-      performed.
+      Users optimize their prompts. They benefitfrom information which is available, and control how 
+      to move through our AI pipeline.
     </p>
     <p>
-      Knowledge is not global by default. AI-Ensemble operates on private,
-      user-provided knowledge sources. If information is not provided,
-      the system does not invent it.
-    </p>
+      Knowledge is not global only. AI-Ensemble operates on private,
+      expert-provided knowledge sources.
+ </p>
   </section>
 
   <section>
@@ -266,8 +260,8 @@
     </p>
     <p>
       <strong>
-        Reliable reasoning emerges from structure, constraints, and explicit knowledge —
-        not from scale alone.
+        Reliable reasoning emerges from structure, curated, and knowledge diversity —
+        not from single sources only.
       </strong>
     </p>
   </section>
