Rewrite product.html improvement 27-12-2025

--- a/product.html
+++ b/product.html
@@ -137,8 +137,7 @@
   <section>
     <h2>Overview</h2>
     <p>
-      AI-Ensemble is a structured reasoning system designed to support complex
-      problem-solving.
+      AI-Ensemble is a structured reasoning system for problem-solving.
     </p>
     <p>
       Instead of interacting with a generic chatbot, users work through a
@@ -151,12 +150,12 @@
     </p>
     <p>
       Both versions share the same core principles:
-      controlled reasoning and explicit knowledge inputs.
+      controlled reasoning, response variation, and explicit knowledge inputs.
     </p>
   </section>
 
   <section>
-    <h2>The Reasoning Pipeline</h2>
+    <h2>The AI Pipeline</h2>
     <p>
       At the core of AI-Ensemble is a fixed three-stage pipeline designed to
       guide the user toward the optimal solution.
@@ -166,17 +165,17 @@
       <div class="card">
         <h3>Scenario — prompt specification</h3>
         <p>
-          This stage focuses on precisely defining the problem to be addressed,
+          This stage focuses on precisely defining the prompt to be used,
           including context, constraints, assumptions, and objectives.
         </p>
         <p>
-          Scenarios may involve tasks such as:
+          Prompts may involve tasks such as:
         </p>
         <ul>
-          <li>writing or reviewing code</li>
+          <li>algorithm creation</li>
           <li>planning an experiment</li>
-          <li>apllication building</li>
-          <li> algorithm creation</li>
+          <li>application building</li>
+          <li>school project/studying</li>
         </ul>
         <p>
           Poorly specified prompts are improved.
@@ -190,8 +189,8 @@
           for the same prompt.
         </p>
         <p>
-          Its purpose is to expose uncertainty, disagreement, and competing
-          assumptions before any synthesis or decision is made.
+          Its purpose is to expose uncertainty and variation conditional on the prompt
+          before any synthesis or decision is made.
         </p>
       </div>
 
@@ -201,7 +200,7 @@
           This stage combines alternatives answers into a solution.
         </p>
         <p>
-          It applies curated knowledge and explicit constraints to produce a
+          It applies curated knowledge and information mixtures to produce a
           defensible result.
         </p>
       </div>
@@ -209,28 +208,28 @@
   </section>
 
   <section>
-    <h2>Why Three Stages Matter</h2>
+    <h2>Our unique value</h2>
     <p>
       Most AI systems merge all reasoning into a single response.
       AI-Ensemble deliberately separates stages of reasoning.
     </p>
     <p>
       This separation allows us to deliver our curated knowledge to each stage. 
-      By adding prior information in each stage we aim to minimize halucinations.
+      We expose answer variation to the user by multiple local models or reasoning paths online.
     </p>
     <p>
-      The stages work together when users transfer knowledge from each stage of our pipeline.
+      The stages work together when users move knowledge through the stages of our pipeline.
     </p>
   </section>
 
   <section>
     <h2>Pipeline way of working with AI</h2>
     <p>
-      Users optimize their prompts. They benefitfrom information which is available, and control how 
-      to move through our AI pipeline.
+      Users optimize their prompts. They benefit from expert prior information. And exploit answer 
+      variation given a prompt.
     </p>
     <p>
-      Knowledge is not global only. AI-Ensemble operates on private,
+      Knowledge is not only model based. AI-Ensemble operates on private,
       expert-provided knowledge sources.
  </p>
   </section>
@@ -243,7 +242,7 @@
     </p>
     <ul>
       <li>CPU-only (no GPU required)</li>
-      <li>Runs on commodity hardware (4–8 cores, 16–32 GB RAM)</li>
+      <li>Runs on commodity hardware/testing is needed</li>
       <li>Uses quantized models</li>
       <li>No cloud dependency or external data access</li>
     </ul>
@@ -275,7 +274,7 @@
 </main>
 
 <footer>
-  AI-Ensemble — Structured reasoning through controlled plurality
+  AI-Ensemble — AI solutions through controlled plurality
 </footer>
 
 </body>
