--- a/index.html
+++ b/index.html
@@ -1,141 +1,69 @@
-<a href="product.html" target="_blank">About AI-Ensemble</a>
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>AI-Ensemble</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-
   <style>
     body {
+      font-family: Arial, sans-serif;
       margin: 0;
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
-      background: #f4f6f8;
-      height: 100vh;
-      display: flex;
-      flex-direction: column;
+      padding: 0;
+      background: #f5f5f5;
     }
-
     header {
-      background: #111827;
-      color: #ffffff;
+      background: #0b1a2b;
+      color: white;
       padding: 12px 20px;
-      font-weight: 600;
-      font-size: 1rem;
+      font-size: 20px;
     }
-
-    .layout {
-      flex: 1;
-      display: grid;
-      grid-template-columns: 1fr 1fr 1fr;
-      gap: 12px;
-      padding: 12px;
-      box-sizing: border-box;
+    .login {
+      padding: 20px;
+      background: white;
+      border-bottom: 1px solid #ccc;
     }
-
+    .login input {
+      margin-right: 10px;
+      padding: 6px;
+    }
+    .login button {
+      padding: 6px 12px;
+    }
+    .container {
+      display: flex;
+      gap: 10px;
+      padding: 10px;
+    }
     .panel {
-      background: #ffffff;
-      border: 1px solid #d1d5db;
-      border-radius: 6px;
+      flex: 1;
+      background: white;
+      border: 1px solid #ccc;
       display: flex;
       flex-direction: column;
     }
-
-    .panel h2 {
+    .panel h3 {
       margin: 0;
-      padding: 10px 12px;
-      font-size: 0.9rem;
-      background: #f9fafb;
-      border-bottom: 1px solid #e5e7eb;
+      padding: 10px;
+      background: #eee;
+      border-bottom: 1px solid #ccc;
     }
-
-    .messages {
+    .panel textarea {
       flex: 1;
       padding: 10px;
-      overflow-y: auto;
-      font-size: 0.85rem;
-      white-space: pre-wrap;
+      border: none;
+      resize: none;
+      font-family: monospace;
     }
-
-    .message {
-      margin-bottom: 8px;
-    }
-
-    .message.user {
-      font-weight: 600;
-    }
-
-    .input {
-      display: flex;
-      border-top: 1px solid #e5e7eb;
-    }
-
-    .input input {
+    .panel pre {
       flex: 1;
-      border: none;
       padding: 10px;
-      font-size: 0.85rem;
-      outline: none;
+      margin: 0;
+      white-space:       overflow-y: auto;
+      background: #fafafa;
+      font-family: monospace;
     }
-
-    .input button {
-      border: none;
-      padding: 10px 14px;
-      background: #2563eb;
-      color: white;
-      cursor: pointer;
-    }
-
-    .input button:hover {
-      background: #1d4ed8;
-    }
-
-    /* LOGIN OVERLAY */
-    .overlay {
-      position: fixed;
-      inset: 0;
-      background: rgba(17,24,39,0.85);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      z-index: 999;
-    }
-
-    .login-box {
-      background: #ffffff;
-      padding: 24px;
-      border-radius: 8px;
-      width: 320px;
-      text-align: center;
-    }
-
-    .login-box h2 {
-      margin-top: 0;
-      margin-bottom: 12px;
-    }
-
-    .login-box input {
-      width: 100%;
-      padding: 10px;
-      font-size: 0.9rem;
-      margin-bottom: 12px;
-    }
-
-    .login-box button {
-      width: 100%;
-      padding: 10px;
-      font-size: 0.9rem;
-      background: #2563eb;
-      color: white;
-      border: none;
-      cursor: pointer;
-    }
-
-    .login-error {
-      color: #b91c1c;
-      font-size: 0.85rem;
-      margin-top: 8px;
-      display: none;
+    .panel button {
+      margin: 10px;
+      padding: 8px;
     }
   </style>
 </head>
@@ -143,154 +71,141 @@
 <body>
 
 <header>
-  AI-Ensemble · AI pipeline interface, start left end right
+  AI-Ensemble — AI pipeline interface, start left end right
 </header>
 
-<!-- LOGIN OVERLAY -->
-<div class="overlay" id="loginOverlay">
-  <div class="login-box">
-    <h2>Login</h2>
-    <input id="passwordInput" type="password" placeholder="Enter password" />
-    <button onclick="login()">Enter</button>
-    <div class="login-error" id="loginError">Invalid password</div>
-  </div>
+<div class="login">
+  <strong>Password:</strong>
+  <input type="password" id="passwordInput">
+  <strong>Client ID:</strong>
+  <input type="text" id="clientIdInput" placeholder="optional">
+  <button onclick="login()">Login</button>
+  <span id="loginError" style="color:red;margin-left:10px;"></span>
 </div>
 
-<div class="layout">
+<div class="container">
 
+  <!-- SCENARIO -->
   <div class="panel">
-    <h2>Scenario — prompt engineering</h2>
-    <p>
-     Crafting the input text (prompt) given to ensemble interface to control its output.
-    </p>
-    <div class="messages" id="scenarioMessages"></div>
-    <div class="input">
-      <input id="scenarioInput" placeholder="Describe the situation or challenge..." />
-      <button onclick="sendMessage('scenario')">Send</button>
-    </div>
+    <h3>Scenario — prompt input</h3>
+    <textarea id="scenarioInput" placeholder="Describe the situation or challenge..."></textarea>
+    <button id="scenarioSend">Send</button>
+    <pre id="scenarioOutput">No response.</pre>
   </div>
 
+  <!-- ENSEMBLE -->
   <div class="panel">
-    <h2>Ensemble — alternative reasoning</h2>
-    <p>
-    This interface generates multiple answers based alternative reasoning paths.
-    Its purpose is to expose output variation given a prompt.
-    Copy and paste the output into the compiler for the final result.
-    </p>
-
-    <div class="messages" id="expertMessages"></div>
-    <div class="input">
-      <input id="expertInput" placeholder="paste answer from prompt engineering interface" />
-      <button onclick="sendMessage('expert')">Send</button>
-    </div>
+    <h3>Ensemble — alternative reasoning</h3>
+    <textarea id="ensembleInput" placeholder="Paste or reuse scenario prompt..."></textarea>
+    <button id="ensembleSend">Send</button>
+    <pre id="ensembleOutput">No response.</pre>
   </div>
 
+  <!-- COMPILER -->
   <div class="panel">
-    <h2>Compiler — grounded synthesis</h2>
-     <p>
-     This interface compile the alternative reasoning paths produced
-     by the Ensemble. 
-     It applies curated knowledge, to compile the final result.
-     </p>
-
-    <div class="messages" id="managerMessages"></div>
-    <div class="input">
-      <input id="managerInput" placeholder="Paste the output from the Ensemble interface" />
-      <button onclick="sendMessage('manager')">Send</button>
-    </div>
+    <h3>Compiler — grounded synthesis</h3>
+    <textarea id="compilerInput" placeholder="Paste ensemble output here..."></textarea>
+    <button id="compilerSend">Send</button>
+    <pre id="compilerOutput">No response.</pre>
   </div>
 
 </div>
-<h2>Prompt openers and closers should be used as described below for optimal results </h2>
 
-<p>
-Left panel opener:>'Please help me with the following scenario:'< 
-Please help me with the following scenario: find me a good restaurant? -> !bad prompt! 
-The system will help you create a better scenario.
-</p>
-
-<p>
-Middle panel opener:>'Based on your expert knowledge:'<
-Based on your expert knowledge: I am looking for a restaurant in Amsterdam for a business dinner with four people.
-The budget is €70–90 per person.
-</p>
-
-<p>
-Right panel closer:>'Please compile the above expert alternatives:'-<
-**Paste the output from the Ensemble** please compile the above expert alternatives.
-This step produces the final solution.
-</p>
 <script>
-  const API_BASE = "https://statsapp-47vj4.ondigitalocean.app";
-  let authToken = sessionStorage.getItem("ai_ensemble_token");
+/* ================= CONFIG ================= */
+const API_BASE = "https://statsapp-47vj4.ondigitalocean.app";
+let authToken = sessionStorage.getItem("ai_ensemble_token");
 
-  async function login() {
-    const password = document.getElementById("passwordInput").value;
-    const error = document.getElementById("loginError");
+/* ================= LOGIN ================= */
+async function login() {
+  const password = document.getElementById("passwordInput").value;
+  const clientId = document.getElementById("clientIdInput").value || "web";
+  const error = document.getElementById("loginError");
 
-    try {
-      const res = await fetch(API_BASE + "/api/login", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ password })
-      });
+  try {
+    const res = await fetch(API_BASE + "/api/login", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ password, client_id: clientId })
+    });
 
-      if (!res.ok) throw new Error();
-
-      const data = await res.json();
-      authToken = data.token;
-      sessionStorage.setItem("ai_ensemble_token", authToken);
-      document.getElementById("loginOverlay").style.display = "none";
-
-    } catch {
-      error.style.display = "block";
+    const data = await res.json();
+    if (!data.ok) {
+      error.innerText = "Login failed";
+      return;
     }
+
+    authToken = data.access_token;
+    sessionStorage.setItem("ai_ensemble_token", authToken);
+    error.innerText = "";
+    alert("Login successful");
+
+  } catch (e) {
+    error.innerText = "Login error";
+  }
+}
+
+/* ================= SEND ================= */
+async function sendPrompt(inputId, outputId) {
+  const input = document.getElementById(inputId);
+  const output = document.getElementById(outputId);
+  const message = input.value.trim();
+
+  if (!message) {
+    output.innerText = "No input.";
+    return;
   }
 
-  // Auto-unlock if token already exists
-  if (authToken) {
-    document.getElementById("loginOverlay").style.display = "none";
-  }
+  output.innerText = "Loading…";
 
-  function addMessage(role, text, cls) {
-    const box = document.getElementById(role + "Messages");
-    const div = document.createElement("div");
-    div.className = "message " + cls;
-    div.textContent = text;
-    box.appendChild(div);
-    box.scrollTop = box.scrollHeight;
-  }
+  try {
+    const res = await fetch(API_BASE + "/api/chat", {
+      method: "POST",
+      headers: {
+        "Content-Type": "application/json",
+        "Authorization": authToken ? "Bearer " + authToken : ""
+      },
+      body: JSON.stringify({ message })
+    });
 
-  async function sendMessage(role) {
-    if (!authToken) return;
+    const data = await res.json();
 
-    const input = document.getElementById(role + "Input");
-    const text = input.value.trim();
-    if (!text) return;
-
-    input.value = "";
-    addMessage(role, "You: " + text, "user");
-
-    try {
-      const res = await fetch(API_BASE + "/api/chat", {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json",
-          "Authorization": "Bearer " + authToken
-        },
-        body: JSON.stringify({
-          role: role,
-          message: text
-        })
-      });
-
-      const data = await res.json();
-      addMessage(role, data.answer || "No response.", "ai");
-
-    } catch {
-      addMessage(role, "Error contacting backend.", "ai");
+    if (!data.ok) {
+      output.innerText = "Backend error.";
+      return;
     }
+
+    if (data.planes) {
+      let text = "";
+      for (const [plane, answer] of Object.entries(data.planes)) {
+        text += "=== " + plane.toUpperCase() + " ===\n\n";
+        text += answer + "\n\n";
+      }
+      output.innerText = text.trim();
+      return;
+    }
+
+    if (data.answer) {
+      output.innerText = data.answer;
+      return;
+    }
+
+    output.innerText = "No response.";
+
+  } catch (err) {
+    output.innerText = "Network error.";
   }
+}
+
+/* ================= BINDINGS ================= */
+document.getElementById("scenarioSend").onclick =
+  () => sendPrompt("scenarioInput", "scenarioOutput");
+
+document.getElementById("ensembleSend").onclick =
+  () => sendPrompt("ensembleInput", "ensembleOutput");
+
+document.getElementById("compilerSend").onclick =
+  () => sendPrompt("compilerInput", "compilerOutput");
 </script>
 
 </body>
