--- a/index.html
+++ b/index.html
@@ -6,18 +6,38 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <style>
+    :root {
+      --bg: #f8f9fb;
+      --fg: #1f2937;
+      --muted: #6b7280;
+      --accent: #2563eb;
+      --card: #ffffff;
+      --border: #e5e7eb;
+    }
+
     body {
       margin: 0;
       font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
-      background: #f8f9fb;
-      color: #1f2937;
+      background: var(--bg);
+      color: var(--fg);
       line-height: 1.6;
     }
 
     header {
-      padding: 1.5rem;
-      background: #ffffff;
-      border-bottom: 1px solid #e5e7eb;
+      padding: 1.25rem 1.5rem;
+      background: var(--card);
+      border-bottom: 1px solid var(--border);
+    }
+
+    header h1 {
+      margin: 0 0 0.25rem 0;
+      font-size: 1.6rem;
+    }
+
+    header p {
+      margin: 0;
+      color: var(--muted);
+      font-size: 0.95rem;
     }
 
     main {
@@ -26,14 +46,16 @@
       padding: 1.5rem;
     }
 
-    h1 {
-      margin: 0 0 0.5rem 0;
+    .scenario {
+      background: var(--card);
+      border: 1px solid var(--border);
+      border-radius: 10px;
+      padding: 1rem;
     }
 
-    h2 {
-      margin-top: 2rem;
-      border-bottom: 1px solid #e5e7eb;
-      padding-bottom: 0.3rem;
+    .scenario h2 {
+      margin: 0 0 0.5rem 0;
+      font-size: 1.2rem;
     }
 
     textarea {
@@ -41,20 +63,29 @@
       min-height: 120px;
       padding: 0.8rem;
       font-size: 1rem;
-      border-radius: 6px;
+      border-radius: 8px;
       border: 1px solid #d1d5db;
       box-sizing: border-box;
+      resize: vertical;
+    }
+
+    .row {
+      display: flex;
+      gap: 1rem;
+      align-items: center;
+      margin-top: 0.75rem;
+      flex-wrap: wrap;
     }
 
     button {
-      margin-top: 0.8rem;
-      padding: 0.6rem 1.2rem;
+      padding: 0.6rem 1.1rem;
       font-size: 1rem;
-      border-radius: 6px;
+      border-radius: 8px;
       border: none;
-      background: #2563eb;
+      background: var(--accent);
       color: white;
       cursor: pointer;
+      font-weight: 600;
     }
 
     button:disabled {
@@ -62,100 +93,106 @@
       cursor: not-allowed;
     }
 
+    .hint {
+      color: var(--muted);
+      font-size: 0.92rem;
+    }
+
+    h2.section {
+      margin-top: 1.5rem;
+      margin-bottom: 0.75rem;
+      font-size: 1.15rem;
+    }
+
     .ensemble {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      grid-template-columns: repeat(3, minmax(0, 1fr));
       gap: 1rem;
-      margin-top: 1rem;
     }
 
-    .alternative {
-      background: #ffffff;
-      border: 1px solid #e5e7eb;
-      border-radius: 8px;
+    @media (max-width: 980px) {
+      .ensemble {
+        grid-template-columns: 1fr;
+      }
+    }
+
+    .plane {
+      background: var(--card);
+      border: 1px solid var(--border);
+      border-radius: 10px;
       padding: 1rem;
+      min-height: 220px;
     }
 
-    .alternative h3 {
-      margin-top: 0;
-      font-size: 1.1rem;
+    .plane h3 {
+      margin: 0 0 0.5rem 0;
+      font-size: 1.05rem;
+    }
+
+    .content {
+      white-space: pre-wrap;
     }
 
     .compiler {
-      background: #ffffff;
-      border: 1px solid #e5e7eb;
-      border-radius: 8px;
-      padding: 1rem;
       margin-top: 1rem;
-    }
-
-    .hint {
-      font-size: 0.9rem;
-      color: #6b7280;
-      margin-top: 0.4rem;
+      background: var(--card);
+      border: 1px solid var(--border);
+      border-radius: 10px;
+      padding: 1rem;
     }
   </style>
 </head>
 
 <body>
+  <header>
+    <h1>AI-Ensemble</h1>
+    <p>Scenario → Ensemble (parallel alternatives) → Compiler (synthesis)</p>
+  </header>
 
-<header>
-  <h1>AI-Ensemble</h1>
-  <p>Scenario → Ensemble (parallel alternatives) → Compiler</p>
-</header>
+  <main>
 
-<main>
+    <!-- Scenario -->
+    <section class="scenario">
+      <h2>Scenario — Prompt Specification</h2>
+      <textarea id="prompt" placeholder="Describe your scenario. Prompts with ambiguity and trade-offs produce better ensemble divergence."></textarea>
+      <div class="row">
+        <button id="sendBtn" type="button">Send to Ensemble</button>
+        <div class="hint">Avoid simple “What is X?” prompts. Prefer trade-offs, multiple framings, or uncertainty.</div>
+      </div>
+    </section>
 
-  <!-- SCENARIO -->
-  <section>
-    <h2>Scenario — Prompt Specification</h2>
-    <textarea id="prompt" placeholder="Describe the scenario. Ambiguity and trade-offs are encouraged."></textarea>
-    <div class="hint">
-      Good scenarios admit multiple plausible interpretations. Avoid simple factual questions.
-    </div>
-    <button type="submit" id="sendBtn">Send to Ensemble</button>
-  </section>
+    <!-- Ensemble -->
+    <h2 class="section">Ensemble — Alternative Reasoning</h2>
+    <section class="ensemble">
 
-  <!-- ENSEMBLE -->
-  <section>
-    <h2>Ensemble — Alternative Reasoning</h2>
-
-    <div class="ensemble">
-      <div class="alternative" id="alt-a">
-        <h3>Alternative A</h3>
+      <div class="plane" id="alt-conservative">
+        <h3>Conservative</h3>
         <div class="content"></div>
       </div>
 
-      <div class="alternative" id="alt-b">
-        <h3>Alternative B</h3>
+      <div class="plane" id="alt-balanced">
+        <h3>Balanced</h3>
         <div class="content"></div>
       </div>
 
-      <div class="alternative" id="alt-c">
-        <h3>Alternative C</h3>
+      <div class="plane" id="alt-exploratory">
+        <h3>Exploratory</h3>
         <div class="content"></div>
       </div>
-    </div>
 
-    <div class="hint">
-      Each alternative is generated independently under different sampling constraints.
-    </div>
-  </section>
+    </section>
 
-  <!-- COMPILER -->
-  <section>
-    <h2>Compiler — Grounded Synthesis</h2>
-    <div class="compiler" id="compiler">
+    <!-- Compiler (placeholder UI only; synthesis logic can be added later) -->
+    <h2 class="section">Compiler — Grounded Synthesis</h2>
+    <section class="compiler">
       <div class="hint">
-        The compiler evaluates the alternatives against the original scenario constraints.
+        This area is reserved for synthesis. For v1, compare the three alternatives first.
       </div>
       <div id="compiler-output"></div>
-    </div>
-  </section>
+    </section>
 
-</main>
+  </main>
 
-<script src="static/script.js"></script>
-
+  <script src="static/script.js"></script>
 </body>
 </html>
