Simplify UI: single chat stream with ensemble responses

--- a/index.html
+++ b/index.html
@@ -6,193 +6,83 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <style>
-    :root {
-      --bg: #f8f9fb;
-      --fg: #1f2937;
-      --muted: #6b7280;
-      --accent: #2563eb;
-      --card: #ffffff;
-      --border: #e5e7eb;
-    }
-
     body {
+      font-family: system-ui, -apple-system, sans-serif;
+      background: #f6f7f9;
       margin: 0;
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
-      background: var(--bg);
-      color: var(--fg);
-      line-height: 1.6;
+      padding: 0;
+      color: #111;
     }
 
     header {
-      padding: 1.25rem 1.5rem;
-      background: var(--card);
-      border-bottom: 1px solid var(--border);
-    }
-
-    header h1 {
-      margin: 0 0 0.25rem 0;
-      font-size: 1.6rem;
-    }
-
-    header p {
-      margin: 0;
-      color: var(--muted);
-      font-size: 0.95rem;
+      padding: 1.2rem;
+      border-bottom: 1px solid #ddd;
+      background: white;
     }
 
     main {
-      max-width: 1200px;
+      max-width: 900px;
       margin: 0 auto;
-      padding: 1.5rem;
-    }
-
-    .scenario {
-      background: var(--card);
-      border: 1px solid var(--border);
-      border-radius: 10px;
       padding: 1rem;
     }
 
-    .scenario h2 {
-      margin: 0 0 0.5rem 0;
-      font-size: 1.2rem;
+    #chat {
+      background: white;
+      border: 1px solid #ddd;
+      border-radius: 6px;
+      padding: 1rem;
+      min-height: 300px;
+      margin-bottom: 1rem;
+      white-space: pre-wrap;
+    }
+
+    .user {
+      font-weight: 600;
+      margin-top: 1rem;
+    }
+
+    .plane {
+      margin-left: 1rem;
+      margin-top: 0.4rem;
     }
 
     textarea {
       width: 100%;
-      min-height: 120px;
-      padding: 0.8rem;
+      min-height: 90px;
+      padding: 0.6rem;
       font-size: 1rem;
-      border-radius: 8px;
-      border: 1px solid #d1d5db;
-      box-sizing: border-box;
-      resize: vertical;
-    }
-
-    .row {
-      display: flex;
-      gap: 1rem;
-      align-items: center;
-      margin-top: 0.75rem;
-      flex-wrap: wrap;
     }
 
     button {
-      padding: 0.6rem 1.1rem;
+      margin-top: 0.6rem;
+      padding: 0.5rem 1rem;
       font-size: 1rem;
-      border-radius: 8px;
-      border: none;
-      background: var(--accent);
-      color: white;
-      cursor: pointer;
-      font-weight: 600;
-    }
-
-    button:disabled {
-      opacity: 0.6;
-      cursor: not-allowed;
     }
 
     .hint {
-      color: var(--muted);
-      font-size: 0.92rem;
-    }
-
-    h2.section {
-      margin-top: 1.5rem;
-      margin-bottom: 0.75rem;
-      font-size: 1.15rem;
-    }
-
-    .ensemble {
-      display: grid;
-      grid-template-columns: repeat(3, minmax(0, 1fr));
-      gap: 1rem;
-    }
-
-    @media (max-width: 980px) {
-      .ensemble {
-        grid-template-columns: 1fr;
-      }
-    }
-
-    .plane {
-      background: var(--card);
-      border: 1px solid var(--border);
-      border-radius: 10px;
-      padding: 1rem;
-      min-height: 220px;
-    }
-
-    .plane h3 {
-      margin: 0 0 0.5rem 0;
-      font-size: 1.05rem;
-    }
-
-    .content {
-      white-space: pre-wrap;
-    }
-
-    .compiler {
-      margin-top: 1rem;
-      background: var(--card);
-      border: 1px solid var(--border);
-      border-radius: 10px;
-      padding: 1rem;
+      font-size: 0.85rem;
+      color: #555;
+      margin-top: 0.3rem;
     }
   </style>
 </head>
 
 <body>
-  <header>
-    <h1>AI-Ensemble</h1>
-    <p>Scenario → Ensemble (parallel alternatives) → Compiler (synthesis)</p>
-  </header>
+<header>
+  <h2>AI-Ensemble</h2>
+  <div>Scenario → Ensemble (parallel alternatives) → Next prompt</div>
+</header>
 
-  <main>
+<main>
+  <div id="chat"></div>
 
-    <!-- Scenario -->
-    <section class="scenario">
-      <h2>Scenario — Prompt Specification</h2>
-      <textarea id="prompt" placeholder="Describe your scenario. Prompts with ambiguity and trade-offs produce better ensemble divergence."></textarea>
-      <div class="row">
-        <button id="sendBtn" type="button">Send to Ensemble</button>
-        <div class="hint">Avoid simple “What is X?” prompts. Prefer trade-offs, multiple framings, or uncertainty.</div>
-      </div>
-    </section>
+  <textarea id="promptInput"
+    placeholder="Describe your scenario. Ambiguity and trade-offs produce better results."></textarea>
 
-    <!-- Ensemble -->
-    <h2 class="section">Ensemble — Alternative Reasoning</h2>
-    <section class="ensemble">
+  <button id="sendBtn">Send</button>
+  <div class="hint">Avoid simple “What is X?” prompts.</div>
+</main>
 
-      <div class="plane" id="alt-conservative">
-        <h3>Conservative</h3>
-        <div class="content"></div>
-      </div>
-
-      <div class="plane" id="alt-balanced">
-        <h3>Balanced</h3>
-        <div class="content"></div>
-      </div>
-
-      <div class="plane" id="alt-exploratory">
-        <h3>Exploratory</h3>
-        <div class="content"></div>
-      </div>
-
-    </section>
-
-    <!-- Compiler (placeholder UI only; synthesis logic can be added later) -->
-    <h2 class="section">Compiler — Grounded Synthesis</h2>
-    <section class="compiler">
-      <div class="hint">
-        This area is reserved for synthesis. For v1, compare the three alternatives first.
-      </div>
-      <div id="compiler-output"></div>
-    </section>
-
-  </main>
-
-  <script src="static/script.js"></script>
+<script src="static/script.js"></script>
 </body>
 </html>
