Add independent Conceptual chatbox using exploratory plane

--- a/index.html
+++ b/index.html
@@ -73,6 +73,20 @@
   <div>Scenario → Ensemble (parallel alternatives) → Next prompt</div>
 </header>
 
+<hr />
+
+<section id="conceptual">
+  <h3>Conceptual</h3>
+
+  <textarea
+    id="conceptualInput"
+    placeholder="Ask a conceptual or philosophical question..."
+  ></textarea>
+
+  <button id="conceptualBtn">Ask (Conceptual)</button>
+
+  <div id="conceptualOutput" class="chat"></div>
+</section>
 <main>
   <div id="chat"></div>
 
