Add Applied Research chat using balanced plane with explanatory suffix

--- a/index.html
+++ b/index.html
@@ -95,8 +95,21 @@
 
   <button id="sendBtn">Send</button>
   <div class="hint">Avoid simple “What is X?” prompts.</div>
-</main>
+<hr />
 
+<section id="applied-research">
+  <h3>Applied Research</h3>
+
+  <textarea
+    id="appliedInput"
+    placeholder="Ask an applied research question..."
+  ></textarea>
+
+  <button id="appliedBtn">Ask (Applied Research)</button>
+
+  <div id="appliedOutput" class="chat"></div>
+</section>
+</main>
 <script src="static/script.js"></script>
 </body>
 </html>
