Add Ensemble section title and remove legacy script file

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
   <div id="conceptualOutput" class="chat"></div>
 </section>
 <main>
+  <h3>Ensemble</h3>  
   <div id="chat"></div>
 
   <textarea id="promptInput"
